# rss-archiver

./: README.md  docker-compose.yml  openapi.json
html/: Dockerfile  pyproject.toml  requirements.txt
html/html_archiver/: main.py
html/tests/: test_html_archiver.py
rss/: celerybeat-schedule  pyproject.toml  requirements.txt
rss-archiver/: pyproject.toml
rss-archiver/tests/: test_rss_archiver.py
rss/api/: crud.py  main.py  models.py  schemas.py
rss/producer/: database.py
rss/rss_archiver/: __main__.py  api.py  crud.py  database.py  models.py  monitor.py  schemas.py
