[tool.poetry]
name = "html-archiver"
version = "0.1.0"
description = ""
authors = ["Ryu1845 <ryu@tpgjbo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
fastapi = {extras = ["all"], version = "^0.79.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
